--- a/RealPromo/RealPromo/RealPromo/MainPage.xaml
+++ b/RealPromo/RealPromo/RealPromo/MainPage.xaml
@@ -1,24 +1,44 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             BackgroundColor="#FE602B"
              x:Class="RealPromo.MainPage">
 
-    <StackLayout>
-        <Frame BackgroundColor="#2196F3" Padding="24" CornerRadius="0">
-            <Label Text="Welcome to Xamarin.Forms!" HorizontalTextAlignment="Center" TextColor="White" FontSize="37"/>
+    <StackLayout Padding="15">
+        <Frame BackgroundColor="#FE602B" BorderColor="White" Padding="0">
+            <StackLayout Orientation="Horizontal">
+                
+                <StackLayout Spacing="0" HorizontalOptions="StartAndExpand" Padding="10">
+                    <Label Text="Carrefour" 
+                TextColor="White"
+                FontAttributes="Bold"
+                FontSize="Large"
+                VerticalOptions="CenterAndExpand"/>
+                    <Label Text="TV LG - 40' R$ 999,99 " 
+                TextColor="White"
+                FontAttributes="Bold"
+                FontSize="Large"  
+                VerticalOptions="CenterAndExpand"/>
+                    <Label Text="Somente 20 unidades" 
+                TextColor="White"
+                VerticalOptions="CenterAndExpand"/>
+                </StackLayout>
+                
+                <StackLayout BackgroundColor="White" Padding="15">
+                    <Label Text="Pegar" 
+                TextColor="#FE602B"
+                FontAttributes="Bold"
+                FontSize="Large"
+                VerticalOptions="CenterAndExpand"/>
+                </StackLayout>
+                
+            </StackLayout>
         </Frame>
-        <Label Text="Start developing now" FontSize="Title" Padding="30,10,30,10"/>
-        <Label Text="Make changes to your XAML file and save to see your UI update in the running app with XAML Hot Reload. Give it a try!" FontSize="16" Padding="30,0,30,0"/>
-        <Label FontSize="16" Padding="30,24,30,0">
-            <Label.FormattedText>
-                <FormattedString>
-                    <FormattedString.Spans>
-                        <Span Text="Learn more at "/>
-                        <Span Text="https://aka.ms/xamarin-quickstart" FontAttributes="Bold"/>
-                    </FormattedString.Spans>
-                </FormattedString>
-            </Label.FormattedText>
-        </Label> 
+        <Label Text="* Toda promoção tem prazo de 1 hora ou unidades." 
+               TextColor="White"
+               HorizontalOptions="Center"
+               VerticalOptions="EndAndExpand"/>
+
     </StackLayout>
 
 </ContentPage>
