--- a/RealPromo/RealPromo/RealPromo/MainPage.xaml
+++ b/RealPromo/RealPromo/RealPromo/MainPage.xaml
@@ -5,35 +5,47 @@
              x:Class="RealPromo.MainPage">
 
     <StackLayout Padding="15">
-        <Frame BackgroundColor="#FE602B" BorderColor="White" Padding="0">
-            <StackLayout Orientation="Horizontal">
-                
-                <StackLayout Spacing="0" HorizontalOptions="StartAndExpand" Padding="10">
-                    <Label Text="Carrefour" 
-                TextColor="White"
-                FontAttributes="Bold"
-                FontSize="Large"
-                VerticalOptions="CenterAndExpand"/>
-                    <Label Text="TV LG - 40' R$ 999,99 " 
-                TextColor="White"
-                FontAttributes="Bold"
-                FontSize="Large"  
-                VerticalOptions="CenterAndExpand"/>
-                    <Label Text="Somente 20 unidades" 
-                TextColor="White"
-                VerticalOptions="CenterAndExpand"/>
-                </StackLayout>
-                
-                <StackLayout BackgroundColor="White" Padding="15">
-                    <Label Text="Pegar" 
-                TextColor="#FE602B"
-                FontAttributes="Bold"
-                FontSize="Large"
-                VerticalOptions="CenterAndExpand"/>
-                </StackLayout>
-                
-            </StackLayout>
-        </Frame>
+
+
+        <ListView x:Name="ListViewPromocao">
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <ViewCell>
+                        <Frame BackgroundColor="#FE602B" BorderColor="White" Padding="0" Margin="5">
+                            <StackLayout Orientation="Horizontal">
+
+                                <StackLayout Spacing="0" HorizontalOptions="StartAndExpand" Padding="10">
+                                    <Label Text="{Binding Empresa}" 
+                                     TextColor="White"
+                                    FontAttributes="Bold"
+                                    FontSize="Large"
+                                    VerticalOptions="CenterAndExpand"/>
+                                    <Label Text="{Binding Chamada}" 
+                                    TextColor="White"
+                                    FontAttributes="Bold"
+                                    FontSize="Large"  
+                                    VerticalOptions="CenterAndExpand"/>
+                                    <Label Text="{Binding Regras}" 
+                                    TextColor="White"
+                                    VerticalOptions="CenterAndExpand"/>
+                                </StackLayout>
+
+                                <StackLayout BackgroundColor="White" Padding="15">
+                                    <Label Text="Pegar" 
+                                    TextColor="#FE602B"
+                                    FontAttributes="Bold"
+                                    FontSize="Large"
+                                    VerticalOptions="CenterAndExpand"/>     
+                                </StackLayout>
+
+                            </StackLayout>
+                        </Frame>
+                    </ViewCell>
+                </DataTemplate>
+            </ListView.ItemTemplate>
+        </ListView>
+
+
         <Label Text="* Toda promoção tem prazo de 1 hora ou unidades." 
                TextColor="White"
                HorizontalOptions="Center"
